--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.12.0",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
+    "axios": "^1.3.5",
     "clsx": "^1.2.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.5.1",
