--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "clsx": "^1.2.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.5.1",
+    "leaflet": "^1.9.3",
+    "leaflet-routing-machine": "^3.2.12",
     "next": "13.0.2",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "tailwindcss": "^3.3.0",
     "use-debounce": "^8.0.4"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "prettier": "^2.8.7",
