--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@react-oauth/google": "^0.11.0",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "clsx": "^1.2.1",
+    "dotenv": "^16.0.3",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.5.1",
+    "google-auth-library": "^8.7.0",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
     "next": "13.0.2",
+    "next-auth": "^4.22.1",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
