--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
     "axios": "^1.3.5",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.0.2",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "focus-visible": "^5.2.0",
@@ -28,6 +28,7 @@
     "google-auth-library": "^8.7.0",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
+    "mdb-react-ui-kit": "^6.0.0",
     "next": "13.0.2",
     "next-auth": "^4.22.1",
     "postcss-focus-visible": "^6.0.4",
@@ -35,7 +36,9 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.11.1",
     "tailwindcss": "^3.3.0",
     "use-debounce": "^8.0.4"
   },
